# OpenDSP

./: CMakeLists.txt
src/: CMakeLists.txt
src/filter/: iirfilter.h
src/filter/analog/: bandpass.h  highpass.h  lowpass.h
src/filter/audio/: peak.h
src/simd/: simd_op.h
src/utils/: sample_buffer.h  values.cpp  values.h
test/: CMakeLists.txt  main.cpp
